--- a/XGBoostV2.ipynb
+++ b/XGBoostV2.ipynb
@@ -15,28 +15,32 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "# 1. 데이터 로딩\n",
-    "df = pd.read_csv('통합된_수출_데이터셋.csv', parse_dates=['날짜'])\n",
+    "df = pd.read_csv('통합된_수출_예측_데이터셋.csv', parse_dates=['날짜'])  # 데이터 통합본 넣기 // 감성지수 데이터도 포함\n",
     "df.set_index('날짜', inplace=True)\n",
     "\n",
+    "# 예측 데이터셋이 xlsx 파일이면\n",
+    "# df = pd.read_excel('통합된_수출_예측_데이터셋.xlsx', index_col='날짜', parse_dates=True) # 데이터 통합본 넣기 // 감성지수 데이터도 포함\n",
+    "\n",
     "# 2. Lag 및 파생변수 생성\n",
-    "df['lag_1'] = df['수출량'].shift(1)\n",
-    "df['lag_2'] = df['수출량'].shift(2)\n",
-    "df['rolling_3'] = df['수출량'].rolling(window=3).mean().shift(1)\n",
-    "df['diff_1'] = df['수출량'].diff(1).shift(1)\n",
+    "# 이전 수출량 데이터를 반영해 시계열의 연속성과 패턴을 학습하도록 lag 및 파생 변수 생성\n",
+    "df['lag_1'] = df['수출량'].shift(1) # 한 달 전 수출량\n",
+    "df['lag_2'] = df['수출량'].shift(2) # 두 달 전 수출량\n",
+    "df['rolling_3'] = df['수출량'].rolling(window=3).mean().shift(1) # 이전 3개월간 수출량 평균 (직전 월까지)\n",
+    "df['diff_1'] = df['수출량'].diff(1).shift(1) # 직전 월 대비 수출량 차이 (변동성 반영)\n",
     "\n",
     "# 3. 결측치 제거\n",
     "df = df.dropna()\n",
     "\n",
-    "# 4. 특성과 타겟 분리\n",
+    "# 4. 피처 & 타깃 분리\n",
     "X = df.drop(columns=['수출량'])\n",
     "y = df['수출량']\n",
     "\n",
-    "# 5. 시계열 순서 유지한 채 분할\n",
+    "# 5. 시계열 순서 유지한 학습/테스트 분리\n",
     "split_idx = int(len(df) * 0.8)\n",
     "X_train, X_test = X.iloc[:split_idx], X.iloc[split_idx:]\n",
     "y_train, y_test = y.iloc[:split_idx], y.iloc[split_idx:]\n",
     "\n",
-    "# 6. XGBoost DMatrix 변환\n",
+    "# 6. DMatrix 변환\n",
     "dtrain = xgb.DMatrix(data=X_train, label=y_train)\n",
     "dtest = xgb.DMatrix(data=X_test, label=y_test)\n",
     "\n",
@@ -58,14 +62,15 @@
     "preds = model.predict(dtest)\n",
     "\n",
     "# 10. 평가\n",
-    "def evaluate(y_true, y_pred):\n",
+    "def get_reg_eval(y_true, y_pred):\n",
     "    mse = mean_squared_error(y_true, y_pred)\n",
     "    rmse = np.sqrt(mse)\n",
     "    mae = mean_absolute_error(y_true, y_pred)\n",
     "    r2 = r2_score(y_true, y_pred)\n",
-    "    print(f'MAE: {mae:.2f}, RMSE: {rmse:.2f}, R2: {r2:.4f}')\n",
+    "    print(f\"MAE: {mae:.4f}, RMSE: {rmse:.4f}, R2: {r2:.4f}\")\n",
     "\n",
-    "evaluate(y_test, preds)\n"
+    "get_reg_eval(y_test, preds)\n",
+    "\n"
    ]
   }
  ],
