시각화 추가
예측 vs 실제 값 시계열 그래프
피처 중요도 시각화

--- a/XGBoostV2.ipynb
+++ b/XGBoostV2.ipynb
@@ -70,7 +70,27 @@
     "    print(f\"MAE: {mae:.4f}, RMSE: {rmse:.4f}, R2: {r2:.4f}\")\n",
     "\n",
     "get_reg_eval(y_test, preds)\n",
-    "\n"
+    "\n",
+    "# 11. 시각화\n",
+    "# 11.1 예측 값 vs 실제 값 시계열 시각화화\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.figure(figsize=(12,6))\n",
+    "plt.plot(y_test.index, y_test, label='실제 수출량', marker='o')\n",
+    "plt.plot(y_test.index, preds, label='예측 수출량', marker='x')\n",
+    "plt.title('실제 수출량 vs 예측 수출량 (XGBoost)')\n",
+    "plt.xlabel('날짜')\n",
+    "plt.ylabel('수출량')\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# 11.2 피처 중요도 시각화\n",
+    "xgb.plot_importance(model, importance_type='weight', height=0.5)\n",
+    "plt.title('XGBoost Feature Importance')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   }
  ],
