--- a/LightGBM.ipynb
+++ b/LightGBM.ipynb
@@ -14,37 +14,37 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "# 1. 데이터 로딩\n",
+    "# 데이터 로딩\n",
     "df = pd.read_csv('통합된_수출_예측_데이터셋.csv', parse_dates=['날짜'])  # 데이터 통합본 넣기 // 감성지수 데이터도 포함\n",
     "df.set_index('날짜', inplace=True)\n",
     "\n",
     "# 예측 데이터셋이 xlsx 파일이면\n",
     "# df = pd.read_excel('통합된_수출_예측_데이터셋.xlsx', index_col='날짜', parse_dates=True) # 데이터 통합본 넣기 // 감성지수 데이터도 포함\n",
     "\n",
-    "# 2. Lag 및 파생변수 생성\n",
+    "# Lag 및 파생변수 생성\n",
     "# 이전 수출량 데이터를 반영해 시계열의 연속성과 패턴을 학습하도록 lag 및 파생 변수 생성\n",
     "df['lag_1'] = df['수출량'].shift(1) # 한 달 전 수출량\n",
     "df['lag_2'] = df['수출량'].shift(2) # 두 달 전 수출량\n",
     "df['rolling_3'] = df['수출량'].rolling(window=3).mean().shift(1) # 이전 3개월간 수출량 평균 (직전 월까지)\n",
     "df['diff_1'] = df['수출량'].diff(1).shift(1) # 직전 월 대비 수출량 차이 (변동성 반영)\n",
     "\n",
-    "# 3. 결측치 제거\n",
+    "# 결측치 제거\n",
     "df = df.dropna()\n",
     "\n",
-    "# 4. 피처 & 타깃 분리\n",
+    "# 피처 & 타깃 분리\n",
     "X = df.drop(columns=['수출량'])\n",
     "y = df['수출량']\n",
     "\n",
-    "# 5. 시계열 순서 유지한 학습/테스트 분리\n",
+    "# 시계열 순서 유지한 학습/테스트 분리\n",
     "split_idx = int(len(df) * 0.8)\n",
     "X_train, X_test = X.iloc[:split_idx], X.iloc[split_idx:]\n",
     "y_train, y_test = y.iloc[:split_idx], y.iloc[split_idx:]\n",
     "\n",
-    "# 6. LightGBM 데이터셋 변환\n",
+    "# LightGBM 데이터셋 변환\n",
     "dtrain = lgb.dataset(data=X_train, label=y_train)\n",
     "dtest = lgb.dataset(data=X_test, label=y_test)\n",
     "\n",
-    "# 7. 모델 파라미터 설정\n",
+    "# 모델 파라미터 설정\n",
     "params = {\n",
     "    'max_depth': 3,\n",
     "    'objective': 'regression',\n",
@@ -54,15 +54,15 @@
     "}\n",
     "num_rounds = 300\n",
     "\n",
-    "# 8. 모델 학습\n",
+    "# 모델 학습\n",
     "model = lgb.train(params, dtrain, num_boost_round=num_rounds,\n",
     "                  valid_sets=[dtrain, dtest],\n",
     "                  early_stopping_rounds=30)\n",
     "\n",
-    "# 9. 예측\n",
+    "# 예측\n",
     "preds = model.predict(X_test, num_iteration=model.best_iteration)\n",
     "\n",
-    "# 10. 평가\n",
+    "# 평가\n",
     "def get_reg_eval(y_true, y_pred):\n",
     "    mse = mean_squared_error(y_true, y_pred)\n",
     "    rmse = np.sqrt(mse)\n",
@@ -72,8 +72,8 @@
     "\n",
     "get_reg_eval(y_test, preds)\n",
     "\n",
-    "# 11. 시각화\n",
-    "# 11.1 예측 값 vs 실제 값 시계열 시각화화\n",
+    "# 시각화\n",
+    "# 예측 값 vs 실제 값 시계열 시각화화\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "plt.figure(figsize=(12,6))\n",
@@ -87,7 +87,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# 11.2 피처 중요도 시각화\n",
+    "# 피처 중요도 시각화\n",
     "xgb.plot_importance(model, importance_type='weight', height=0.5)\n",
     "plt.title('XGBoost Feature Importance')\n",
     "plt.tight_layout()\n",
