--- a/LightGBM_Model.ipynb
+++ b/LightGBM_Model.ipynb
@@ -76,7 +76,7 @@
     "plt.rc('axes', unicode_minus=False)\n",
     "\n",
     "# 데이터 로드\n",
-    "df = pd.read_csv('data_integ.csv', parse_dates=['date'])  # 데이터 통합본 넣기 // 감성지수 데이터도 포함\n",
+    "df = pd.read_csv('data_integ (1).csv', parse_dates=['date'])  # 데이터 통합본 넣기 // 감성지수 데이터도 포함\n",
     "df.set_index('date', inplace=True)\n",
     "\n",
     "# Lag 및 파생변수 생성\n",
